--- a/content.css
+++ b/content.css
@@ -1,9 +1,12 @@
 body{
     background-color: rgb(42, 42, 42);
-    padding-top: 5%;
+    padding-top: 1%;
     color: white;
 }
-
+.beginning {
+    display: flex;
+    justify-content: flex-end;
+}
 .container {
     position: relative;
     left: 11em;
@@ -12,13 +15,6 @@ body{
     width: 80%;
     
 }
-
-/* Make look pretty bc this text box. ^^ */
-
-/*need button look pretty too, look same, all same button*/
-
-
-
 #background{
     position: relative;
     left: 28em;
