--- a/content.css
+++ b/content.css
@@ -13,14 +13,15 @@ body{
 }
 
 #content {
-border-style: solid;
+border-style:solid;
+border-radius: 2em;
     width: 60%;
     padding:2em;
     margin-top: 2em;
 }
 
 .a12bgf{
-    text-shadow: 0px 0px 5px white;
+    text-shadow: 0px 0px 10px rgb(151, 151, 151);
 }
 
 button {
@@ -28,6 +29,7 @@ button {
     border-style: solid;
     border-color: white;
     border-width: 0.5px;
+    border-radius: 5px;
     padding: 5px;
     margin: 5px;
     color: white;
