--- a/content.css
+++ b/content.css
@@ -46,6 +46,7 @@ button {
     font-family: "Silkscreen", sans-serif;
     font-weight: 400;
     font-style: normal;
+    border-radius: 7px;
 }
 
 @media only screen and (max-width:600px){
