--- a/content.css
+++ b/content.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Silkscreen:wght@400;700&display=swap');
 
 
-body{
+body {
     background-color: rgb(42, 42, 42);
     padding-top: 1%;
     color: rgb(236, 236, 236);
@@ -11,17 +11,18 @@ body{
     font-weight: 400;
     font-style: normal;
     flex-wrap: wrap;
+
 }
 
 #content {
-border-style:solid;
-border-radius: 2em;
+    border-style: solid;
+    border-radius: 2em;
     width: 60%;
-    padding:2em;
+    padding: 1.2em;
     margin-top: 2em;
 }
 
-.a12bgf{
+.a12bgf {
     text-shadow: 0px 0px 10px rgb(151, 151, 151);
 }
 
@@ -31,19 +32,20 @@ button {
     border-color: white;
     border-width: 0.5px;
     border-radius: 5px;
-    padding: 5px;
-    margin: 5px;
+    padding: 7px;
+    margin-top: 10px;
     color: white;
     font-family: "Silkscreen", sans-serif;
     font-weight: 400;
     font-style: normal;
-  }
+    font-size: 1em;
+}
 
-  button:active{
+button:active {
     background-color: rgb(73, 73, 73);
-  }
-  
-#name-input{
+}
+
+#name-input {
     font-family: "Silkscreen", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -55,16 +57,26 @@ button {
     height: 40vh;
     margin: 0 auto;
     padding-bottom: 1em;
-    
+
 }
 
-#imageContainer > img {
+#imageContainer>img {
     object-fit: cover;
     width: 100%;
     height: 100%;
     border-radius: 2em;
 }
 
-@media only screen and (max-width:600px){
-    
+p{
+  font-size: 1.2em;  
 }
+
+input[type='radio']{
+    transform:scale(2);
+}
+
+input{
+    margin: 1em;
+}
+
+@media only screen and (max-width:600px) {}
